# attestation

./: .gitmodules  CMakeLists.txt  FindKernelHeaders.cmake  README.md  enclave.c  enclave.h  libenclave.mri.in  requirements.txt  target-linux-x86-gnu.cmake  target-linux-x86_64-gnu.cmake
.github/workflows/: cmake.yaml  posix.yaml
app/: CMakeLists.txt
app/mind_crypto/: .gitignore  CMakeLists.txt  mind_crypto_main.c
app/mind_crypto/include/: limits.h  stdint.h
backend/: CMakeLists.txt
backend/mbedtls/include/mbedtls/: mbedtls_config.h
cmake/: baremetal.cmake  build_mbedtls.cmake  certikos_user.cmake  enclave_user_build.cmake  linux_kernel.cmake  linux_kernel_extra.cmake  testing.cmake
config/: aarch64.cmake  arm.cmake  mbedtls_os.h  mbedtls_v3.2.1.patch  x86_32.cmake  x86_64.cmake
crypto/: CMakeLists.txt  crypto.c  crypto.h  crypto_context.c  crypto_context.h  crypto_context_linux.h  crypto_context_linux_kernel.c  mbedtls_import.h  mbedtls_import_headers.h  root_key.c
inc/: abstraction.h  config.h  enclave_common.h  enclave_platform.h  enclave_protocol_dds.h  identities.h  mbedtls_abstraction.h  primitives.h  primitives_baremetal.h  primitives_certikos_user.h  primitives_linux_kernel.h  primitives_posix.h  threading_alt.h  threading_baremetal.h  threading_certikos_user.h  threading_linux_kernel.h  threading_posix.h
inc/baremetal/: limits.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
misc/: key.py  utils.py
src/: CMakeLists.txt  baremetal_printf.c  dummy_main.c  dummy_module.c  enclave_common.c  enclave_platform.c  enclave_protocol_dds.c  identities.c  mbedtls_abstraction.c  primitives_baremetal.c  primitives_posix.c  root_key.c
test/: CMakeLists.txt  bench_asymmetric_cipher.cc  bench_mbedtls_abstraction.cc  bench_psa_symmetric_cipher.cc  bench_symmetric_cipher.cc  common.h  demo_enclave_attestation.c  developer_key.pem  root_key.pem  sample_enclave_user.c  sample_enclave_user.trust.yaml  test_crypto_chacha_poly.cc  test_crypto_ecc_ecdh.cc  test_crypto_ecc_ecdsa.cc  test_crypto_md_sha256.cc  test_crypto_random_access_cipher.cc  test_crypto_rng.cc  test_crypto_rot.cc  test_enclave_identities.cc  test_enclave_platform.cc  test_enclave_platform_attestation.cc  test_enclave_platform_loader.cc  test_enclave_protocol_dds.cc  test_mbedtls_abstraction.cc  test_psa_asymmetric_cipher.cc  test_psa_hash.cc  test_psa_kd.cc  test_psa_symmetric_cipher.cc
test/linux/: .gitignore  CMakeLists.txt  demo_enclave_linux_driver.c
test/linux/include/: limits.h  string.h
